New entries should be added at the top

2005-07-26 Added new widgets Cursor and HorizontalSpanSelector to
           matplotlib.widgets.  See examples/widgets/cursor.py and
           examples/widgets/span_selector.py - JDH

2005-07-26 added draw event to mpl event hierarchy -- triggered on
           figure.draw

2005-07-26 backend_gtk.py: allow 'f' key to toggle window fullscreen mode

2005-07-26 backend_svg.py: write "<.../>" elements all on one line and remove 
           surplus spaces - SC

2005-07-25 backend_svg.py: simplify code by deleting GraphicsContextSVG and
           RendererSVG.new_gc(), and moving the gc.get_capstyle() code into
           RendererSVG._get_gc_props_svg() - SC

2005-07-24 backend_gtk.py: call FigureCanvasBase.motion_notify_event() on
           all motion-notify-events, not just ones where a modifier key or
           button has been pressed (fixes bug report from Niklas Volbers) - SC

2005-07-24 backend_gtk.py: modify print_figure() use own pixmap, fixing 
           problems where print_figure() overwrites the display pixmap. 
	   return False from all button/key etc events - to allow the event
           to propagate further - SC

2005-07-23 backend_gtk.py: change expose_event from using set_back_pixmap();
           clear() to draw_drawable() - SC

2005-07-23 backend_gtk.py: removed pygtk.require()
           matplotlib/__init__.py: delete 'FROZEN' and 'McPLError' which are 
           no longer used - SC

2005-07-22 backend_gdk.py: removed pygtk.require() - SC

2005-07-21 backend_svg.py: Remove unused imports. Remove methods doc strings
           which just duplicate the docs from backend_bases.py. Rename
           draw_mathtext to _draw_mathtext. - SC

2005-07-17 examples/embedding_in_gtk3.py: new example demonstrating placing
           a FigureCanvas in a gtk.ScrolledWindow - SC

2005-07-14 Fixed a Windows related bug (#1238412) in texmanager - DSD

2005-07-11 Fixed color kwarg bug, setting color=1 or 0 caused an 